[project]
name = "pykonik-talk-27-11-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==0.3.27",
    "langgraph==0.6.3",
    "langchain-community==0.3.27",
    "langchain-anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
]
